# Text-Editor-GNOME

./: README.md  com.example.finalTest.json  meson.build
.flatpak-builder/cache/refs/heads/x86_64-com.example.finalTest.json/: init
.flatpak-builder/checksums/: x86_64-com.example.finalTest.json
data/: com.example.finalTest.desktop.in  com.example.finalTest.gschema.xml  com.example.finalTest.metainfo.xml.in  meson.build
data/icons/: meson.build
po/: POTFILES  meson.build
src/: finaltest-application.c  finaltest-application.h  finaltest-window.c  finaltest-window.h  finaltest-window.ui  finaltest.gresource.xml  main.c  meson.build
